Fixed form gaps

--- a/src/components/ChoiceGroup/ChoiceGroup.module.scss
+++ b/src/components/ChoiceGroup/ChoiceGroup.module.scss
@@ -2,8 +2,6 @@
 @import "../../styles/mixins.scss";
 
 .ChoiceGroup {
-  margin: $spacer-sm $spacer-md $spacer-lg;
-
   .choiceGroupItem {
     @extend %buttonPrimary;
     margin-right: $spacer-md;
@@ -19,7 +17,6 @@
   }
 
   .choiceTitle {
-    padding-left: $spacer-xs;
     user-select: none;
   }
 }
