--- a/src/paths/AddGame/AddGame.module.scss
+++ b/src/paths/AddGame/AddGame.module.scss
@@ -3,5 +3,7 @@
 
 .form {
   display: grid;
+  grid-column-gap: $spacer-md;
+  grid-row-gap: $spacer-mdlg;
   grid-template-columns: 1fr 2fr;
 }
